apps/contextapi/base/contextapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contextapi
spec:
  selector:
    matchLabels:
      app: contextapi
      tier: api
  template:
    metadata:
      labels:
        app: contextapi
        tier: api
    spec:
      containers:
        - name: node
          image: quicklookup/contextapi:a0eddc6
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /cdn
              name: cdn
          ports:
            - name: http # Added name
              containerPort: 4001
          livenessProbe:
            httpGet:
              port: 4001
              path: /api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 4001
              path: /api/status/ready
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: cdn
          hostPath:
            path: /data/cdn
