apps/contextapi/base/contextapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contextapi
  labels:
    app: contextapi
    tier: api
spec:
  type: NodePort
  sessionAffinity: ClientIP # Added this line
  ports:
    - port: 4001
  selector:
    app: contextapi
    tier: api
